welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:20: error: illegal start of simple expression
  	} else if ((compteur+1)%(getMondeHauteur()) == 0)){
                                                         ^